<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBoxLowercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkboxlowercase" />

            <CheckBox
                android:id="@+id/checkBoxUppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkboxuppercase" />

            <CheckBox
                android:id="@+id/checkBoxNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkboxnumbers" />

            <CheckBox
                android:id="@+id/checkBoxSpaces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkboxspaces" />

            <CheckBox
                android:id="@+id/checkBoxSpecials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkboxspecials" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="6dp"
        android:padding="12dp"
        android:text="@string/generate"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>