<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="key"
            type="com.layne.squirrel.core.domain.Key" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/menu_showkey_username"
                        android:inputType="text"
                        android:nextFocusForward="@id/editTextEmail"
                        android:singleLine="true"
                        android:text="@{key.username}"
                        android:textColor="?android:attr/textColorPrimary"
                        android:theme="@style/EditTextStyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/buttonCopyUsername"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/menu_showkeys_copy_username"
                        android:src="@drawable/ic_content_copy"
                        android:tint="?android:attr/textColorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/menu_showkey_email"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@id/editTextPassword"
                        android:singleLine="true"
                        android:text="@{key.email}"
                        android:textColor="?android:attr/textColorPrimary"
                        android:theme="@style/EditTextStyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/buttonCopyEmail"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/menu_showkeys_copy_email"
                        android:src="@drawable/ic_content_copy"
                        android:tint="?android:attr/textColorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonKey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@android:color/transparent"
                            app:hintTextColor="@android:color/transparent"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:nextFocusForward="@id/editTextUrl"
                            android:singleLine="true"
                            android:text="@{key.password}"
                            android:textColor="?android:attr/textColorPrimary"
                            android:theme="@style/EditTextStyle" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/buttonKey"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/openkeygenerator"
                        android:src="@drawable/ic_key"
                        android:tint="?android:attr/textColorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonCopyPassword"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/buttonCopyPassword"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/menu_showkeys_copy_password"
                        android:src="@drawable/ic_content_copy"
                        android:tint="?android:attr/textColorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/menu_showkey_url"
                        android:inputType="textUri"
                        android:nextFocusForward="@id/editTextNote"
                        android:singleLine="true"
                        android:text="@{key.url}"
                        android:textColor="?android:attr/textColorPrimary"
                        android:theme="@style/EditTextStyle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/buttonCopyUrl"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/menu_showkeys_go_to_url"
                        android:src="@drawable/ic_action_chrome"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/menu_showkey_note"
                    android:inputType="textCapSentences|textMultiLine"
                    android:text="@{key.note}"
                    android:textColor="?android:attr/textColorPrimary"
                    android:theme="@style/EditTextStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonDelete"
                    style="@style/PrimaryFlatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:elevation="2dp"
                    android:fontFamily="@font/poppins"
                    android:padding="12dp"
                    android:shadowRadius="7.0"
                    android:text="@string/menu_showkey_delete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>