<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp"
    tools:parentTag="com.google.android.material.card.MaterialCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewHandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="23dp"
            android:contentDescription="@string/cd_chip_icon"
            app:layout_constraintBottom_toTopOf="@+id/textViewNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/drawable_chip" />

        <ImageView
            android:id="@+id/imageViewBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/cd_brand_card_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/drawable_visa" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/credit"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1234 5678 9012 3456" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/credit"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="M. DUPONT HERVE" />

        <TextView
            android:id="@+id/textViewExpiryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/credit"
            android:text="@string/up_to"
            android:textColor="@color/hintColor"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/textViewName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNumber" />

        <TextView
            android:id="@+id/textViewExpiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/credit"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/textViewName"
            app:layout_constraintStart_toEndOf="@id/textViewExpiryLabel"
            app:layout_constraintTop_toBottomOf="@id/textViewNumber"
            tools:text="05/21" />

        <TextView
            android:id="@+id/textViewCVVLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/credit"
            android:text="@string/cvv"
            android:textColor="@color/hintColor"
            android:textSize="12sp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewCVV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/credit"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCVVLabel"
            tools:text="830" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>